Add commands section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<header> WELCOME TO MY SITE</header>
 		<main>
 			Here is my<span>bodacious</span> main content!
+			<section>
+				<header>useful commands</header>
+				<dl>
+					<dt>how to close vim</dt>
+					<dd>ESC -&gt; Shift + : -&gt; q</dd>
+				</dl>
 		</main>
 		<footer>Spencer Miller 2018</footer>
 	</div>
