--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="sitecontainer">
-		<header class="Arial">WELCOME TO MY SITE</header>
+		<header class="helvetica">WELCOME TO MY SITE</header>
 		<main>
 			Here is my<span>bodacious</span> main content!
 		</main>
