--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<div class="sitecontainer">
 		<header class="helvetica">WELCOME TO MY SITE</header>
 		<main>
-			Here is my<span>bodacious</span> main content!
+			Here is my<span> bodacious</span> main content!
+                         <article>
+                            <div> Your coding skills are on point sir Miller </div>
+			</article>
 		</main>
 		<footer>Spencer Miller 2018</footer>
 	</div>
