--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 			Here is my<span> bodacious</span> main content!
                          <article>
                             <div> Your coding skills are on point sir Miller </div>
+			<dl>
+				<dt>git add<dt>
+				<dd>git add "filename"<dd>
+			</dl>
 			</article>
 		</main>
 		<footer>Spencer Miller 2018</footer>
