added dt and dd text to git status

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
                          <article>
                             <div> Your coding skills are on point sir Miller </div>
 			</article>
+		<dl>
+			<dt> Git commands </dt>
+			<dd> shift:w to save shift:q to close </dd>
+                        <dt> git status </dt>
+                        <dd> git status </dd>
+ 		</dl>
+                       
+
 		</main>
 		<footer>Spencer Miller 2018</footer>
 	</div>
