added git commit text to new dt

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<dd> shift:w to save shift:q to close </dd>
                         <dt> git status </dt>
                         <dd> git status </dd>
+			<dt> git commit</dt>
  		</dl>
                        
 
