--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<dd> shift:w to save shift:q to close </dd>
                         <dt> git status </dt>
                         <dd> git status </dd>
+			<dt> git pull</dt>
+			<dd> git pull</dd>
  		</dl>
                        
 
