--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         <dt> git status </dt>
                         <dd> git status </dd>
 			<dt> git commit</dt>
- 		</dl>
+ 			<dd> Git Push</dd>
+      		</dl>
                        
 
 		</main>
