added git init dirictions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 			<dd> shift:w to save shift:q to close </dd>
                         <dt> git status </dt>
                         <dd> git status </dd>
-
+			<dt>git init</dt>
+			<dd>git init</dd>
+			
 			<dt> git pull</dt>
 			<dd> git pull</dd>
 			<dt> git commit</dt>
