--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<section>Hello World!!!
 			
 		</section>
+		<section> Hello Again :)
+			
+		</section>
 		<footer>Spencer Miller 2018</footer>
 	</div>
 </body>
